--- a/inphms/addons/base/views/ir_sequence_views.xml
+++ b/inphms/addons/base/views/ir_sequence_views.xml
@@ -193,6 +193,6 @@
             <field name="context">{'active_test': False}</field>
         </record>
 
-        <menuitem action="ir_sequence_form" id="menu_ir_sequence_form" parent="next_id_5"/>
+        <!-- <menuitem action="ir_sequence_form" id="menu_ir_sequence_form" parent="next_id_5"/> -->
 
 </inphms>
